--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,4 @@
 .season-table{
-    background-color: palevioletred;
+    background-color: goldenrod;
     color: darkred;
-    border: 1px solid saddlebrown;
 }
